src/widgets/Sidebar/ui/SidebarLink/SidebarLink.module.scss
.wrapper {
	width: 100%;
	list-style-type: none;
}

.img {
	min-width: 40px;
}

.link {
	display: flex;
	align-items: center;
	height: 3.75rem;
	cursor: pointer;
	text-decoration: none;
	font-weight: 700;
	transition: all 0.3s ease;

	color: var(--white-theme-color);

	svg {
		fill: transparent;
	}

	.text::before {
		opacity: 0;
		transition: all 0.3s ease;
	}

	&.isActive, &:hover {
		.text {
			position: relative;
			color: var(--color-black-tertiary);
			transition: all 0.3s ease;
		}
		.text::before {
				opacity: 1;
				content: "";
				position: absolute;
				top: 100%;
				background-color: var(--color-black-tertiary);
				width: 100%;
				height: 2px;
				transition: all 0.3s ease;
		}
		svg path{
			stroke: var(--color-black-tertiary);
			transition: all 0.3s ease;
		}
	}
}

.openedLink img {
	margin: 0 0.875rem;
}

.text {
	display: none;
	margin-right: auto;
	text-align: left;
}

.opened {
	display: block;

	margin-left: 1.5rem;
}

